Added information about the variables that go into the query

--- a/icesat2-data-visualization.ipynb
+++ b/icesat2-data-visualization.ipynb
@@ -142,37 +142,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#bounding box\n",
-    "#Larsen C Ice Shelf\n",
-    "short_name = 'ATL06'\n",
-    "date_range = ['2020-7-1', '2020-8-1']\n",
+    "##########################################################\n",
+    "# VARIABLES FOR CREATING A BOUNDING BOX TO VIEW THE DATA #\n",
+    "##########################################################\n",
+    "\n",
+    "# See this for more info about the variables: https://icepyx.readthedocs.io/en/latest/example_notebooks/IS2_data_access.html\n",
+    "    # short_name is the data of interest\n",
+    "    # spatial_extent is the bounding box. It can be a shp, kml, or gpkg format for a polygon shape\n",
+    "    # date_range is in the format YYYY-MM-DD, or it can be a list of 2 datetime objects\n",
+    "    # cycles is \n",
+    "\n",
+    "# short_name variable possibilities: https://nsidc.org/data/icesat-2/products\n",
+    "    # ATL07 is Sea Ice Height\n",
+    "    # ATL06 is Land Ice Height\n",
+    "    # ATL10 is Sea Ice Freeboard ** what we are interested in **\n",
+    "\n",
+    "# spatial_extent examples, using a rectangle, polygon, or a shape file:\n",
+    "    # rectangle_spatial_extent = [-67, -70, -59, -65] \n",
+    "    # polygon_spatial_extent = [(-55, 68), (-55, 71), (-48, 71), (-48, 68), (-55, 68)]\n",
+    "    # polygon_file_spatial_extent = './supporting_files/data-access_PineIsland/glims_polygons.shp'\n",
+    "\n",
+    "# Example:\n",
+    "# Larsen C Ice Shelf\n",
+    "short_name = 'ATL10'\n",
     "spatial_extent = [-67, -70, -59, -65] \n",
+    "date_range = ['2020-7-1', '2020-8-1']\n",
     "cycles = ['03']\n",
     "tracks = ['0948', '0872', '1184', '0186', '1123', '1009', '0445', '0369']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # polygon vertices\n",
+    "# Larsen C Ice Shelf\n",
     "# short_name = 'ATL06'\n",
-    "# date_range = ['2019-02-20','2019-02-28']\n",
-    "# spatial_extent = [(-55, 68), (-55, 71), (-48, 71), (-48, 68), (-55, 68)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # polygon geospatial file\n",
-    "# short_name = 'ATL06'\n",
-    "# date_range = ['2019-10-01','2019-10-05']\n",
-    "# spatial_extent = './supporting_files/data-access_PineIsland/glims_polygons.shp'"
+    "# date_range = ['2020-7-1', '2020-8-1']\n",
+    "# spatial_extent = [-67, -70, -59, -65] \n",
+    "# cycles = ['03']\n",
+    "# tracks = ['0948', '0872', '1184', '0186', '1123', '1009', '0445', '0369']"
    ]
   },
   {
