--- a/practice-plotting/cartopy-practice.ipynb
+++ b/practice-plotting/cartopy-practice.ipynb
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -475,6 +475,10 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
     "\n",
+    "MAXLONGITUDE = 180\n",
+    "MINLONGITUDE = -180\n",
+    "NORTHPOLE = 90\n",
+    "\n",
     "def plotNorthPole2Maps():\n",
     "    fig = plt.figure(figsize=[10, 5])\n",
     "\n",
@@ -495,7 +499,7 @@
     "    # Format for set_extent is [minimum longitude, maximum longitude, minimum latitude, maximum latitude]\n",
     "        # -180 to 180 shows all the way around the globe\n",
     "        # 70 seems like a good lower boundary; 90 is the north pole\n",
-    "    leftMap.set_extent([-180,180,70,90], ccrs.PlateCarree())\n",
+    "    leftMap.set_extent([MINLONGITUDE, MAXLONGITUDE, 70, NORTHPOLE], ccrs.PlateCarree())\n",
     "\n",
     "    leftMap.add_feature(cfeature.OCEAN)\n",
     "    rightMap.add_feature(cfeature.OCEAN)\n",
