--- a/practice-plotting/matplotlib-practice.ipynb
+++ b/practice-plotting/matplotlib-practice.ipynb
@@ -36,6 +36,16 @@
     "ax.set_title(\"A line plot on a polar axis\", va='bottom')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.mathworks.com/help/matlab/ref/matlab.graphics.axis.geographicaxes-properties.html\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
