Organized the repo better

--- a/practice-plotting/icesat2-data-visualization.ipynb
+++ b/practice-plotting/icesat2-data-visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,29 @@
     "    # ATL10 is Sea Ice Freeboard ** what we are interested in **\n",
     "\n",
     "# spatial_extent examples, using a rectangle, polygon, or a shape file:\n",
+    "    # Decimal degrees for the lower left longitude, lower left latitude, upper right longitude, and upper right latitude\n",
+    "\n",
+    "    #       ---------X\n",
+    "    #       |        |\n",
+    "    #       |        |\n",
+    "    #       |        |\n",
+    "    #       X---------\n",
+    "\n",
     "    # rectangle_spatial_extent = [-67, -70, -59, -65] \n",
     "    # polygon_spatial_extent = [(-55, 68), (-55, 71), (-48, 71), (-48, 68), (-55, 68)]\n",
     "    # polygon_file_spatial_extent = './supporting_files/data-access_PineIsland/glims_polygons.shp'\n",
     "\n",
     "# tracks. See https://icesat-2.gsfc.nasa.gov/science/specs\n",
     "\n",
-    "# Example:\n",
-    "# Larsen C Ice Shelf\n",
     "short_name = 'ATL10'\n",
-    "spatial_extent = [-67, -70, -59, -65] \n",
+    "\n",
+    "# Bounding Box\n",
+    "lower_left_longitude = -67\n",
+    "lower_left_latitude = -70\n",
+    "upper_right_longitude = -59\n",
+    "upper_right_latitude = -65\n",
+    "\n",
+    "spatial_extent = [lower_left_longitude, lower_left_latitude, upper_right_longitude, upper_right_latitude]\n",
     "date_range = ['2020-7-1', '2020-8-1']\n",
     "cycles = ['03']\n",
     "tracks = ['0948', '0872', '1184', '0186', '1123', '1009', '0445', '0369']"
@@ -58,10 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Example:\n",
     "# Larsen C Ice Shelf\n",
     "# short_name = 'ATL06'\n",
     "# date_range = ['2020-7-1', '2020-8-1']\n",
@@ -72,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +109,7 @@
       "23:59:59\n",
       "006\n",
       "['08']\n",
-      "['0445', '0376', '0102', '0544', '0430', '0422', '0140', '0361', '0567', '0483', '0186', '0163', '0506', '0559', '0315', '0323', '0262', '0125', '0201', '0384']\n"
+      "['0376', '0125', '0559', '0567', '0323', '0483', '0163', '0430', '0186', '0422', '0544', '0315', '0140', '0361', '0102', '0201', '0445', '0262', '0506', '0384']\n"
      ]
     }
    ],
@@ -112,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
