Made an animation of 5 days worth of sea ice data; refactored the visualization file a lot.

--- a/plotting_library_practice/matplotlib_practice.ipynb
+++ b/plotting_library_practice/matplotlib_practice.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -322,18 +322,27 @@
     "ax.legend()\n",
     "\n",
     "\n",
+    "# def update(frame):\n",
+    "#     # for each frame, update the data stored on each artist.\n",
+    "#     x = t[:frame]\n",
+    "#     y = z[:frame]\n",
+    "#     # update the scatter plot:\n",
+    "#     data = np.stack([x, y]).T\n",
+    "#     scat.set_offsets(data)\n",
+    "#     # update the line plot:\n",
+    "#     line2.set_xdata(t[:frame])\n",
+    "#     line2.set_ydata(z2[:frame])\n",
+    "#     return (scat, line2)\n",
+    "\n",
     "def update(frame):\n",
     "    # for each frame, update the data stored on each artist.\n",
     "    x = t[:frame]\n",
     "    y = z[:frame]\n",
+    "    \n",
     "    # update the scatter plot:\n",
     "    data = np.stack([x, y]).T\n",
     "    scat.set_offsets(data)\n",
-    "    # update the line plot:\n",
-    "    line2.set_xdata(t[:frame])\n",
-    "    line2.set_ydata(z2[:frame])\n",
-    "    return (scat, line2)\n",
-    "\n",
+    "    return (scat)\n",
     "\n",
     "ani = animation.FuncAnimation(fig=fig, func=update, frames=40, interval=30)\n",
     "plt.show()\n",
